[package]
name = "hustlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grok = "1.2"
chrono = "0.4"
clap = { version = "3.1.10", features = ["derive"] }
sqlparser = "0.16.0"
sql-builder = "3.1"
csv = "1.1"
